--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <style>
         :root {
@@ -503,30 +503,6 @@
                             </ul>
                         </li>
 
-                        <!-- Servicios -->
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="serviciosDropdown" role="button" data-bs-toggle="dropdown">
-                                <i class="fas fa-concierge-bell"></i> Servicios
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="{% url 'blog:tramites' %}">Trámites Digitales</a></li>
-                                <li><a class="dropdown-item" href="{% url 'blog:pqr' %}">PQR</a></li>
-                                <li><a class="dropdown-item" href="{% url 'blog:blog' %}">Blog</a></li>
-                            </ul>
-                        </li>
-
-                        <!-- Información -->
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="infoDropdown" role="button" data-bs-toggle="dropdown">
-                                <i class="fas fa-info-circle"></i> Información
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="{% url 'blog:educacion' %}">Educación Financiera</a></li>
-                                <li><a class="dropdown-item" href="{% url 'blog:negocios' %}">Negocios</a></li>
-                                <li><a class="dropdown-item" href="{% url 'blog:asesores' %}">Asesores</a></li>
-                            </ul>
-                        </li>
-
                         <!-- Usuario -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown">
@@ -537,6 +513,15 @@
                                     <i class="fas fa-sign-out-alt"></i> Cerrar Sesión
                                 </a></li>
                             </ul>
+                        </li>
+
+                        <!-- Gestión de Citas -->
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.resolver_match.url_name == 'appointment_list' %}active{% endif %}" 
+                               href="{% url 'blog:appointment_list' %}">
+                                <i class="fas fa-calendar-alt me-1"></i>
+                                Gestión de Citas
+                            </a>
                         </li>
                     {% else %}
                         <li class="nav-item">
